--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -110,7 +110,8 @@
 		<dependency>
 			<groupId>org.jboss.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>3.1.5.GA</version>
+			<version>3.2.3.Final</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
