git-svn-id: http://svn.code.sf.net/p/hwmail/code@5 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/assembly/src/release/conf/default.properties
+++ b/assembly/src/release/conf/default.properties
@@ -11,7 +11,7 @@ jdbc.maxIdle=8
 
 # Directory information
 # data_directory=${app.home}\\data
-# temp_directory=${app.home}\\tmp
+# temp_directory=${app.home}\\temp
 # queue_directory=${app.home}\\spool
 
 # SSL/TLS settings
