upgraded netty library from 3.2.3 to 3.2.5 monitor thread and memory usage Netty OutOfMemoryException
git-svn-id: http://svn.code.sf.net/p/hwmail/code@12 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -14,7 +14,8 @@
 	<repositories>
 		<repository>
 			<id>repository.jboss.org</id>
-			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
+			<!--url>https://repository.jboss.org/nexus/content/groups/public/</url-->
+			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -110,7 +111,8 @@
 		<dependency>
 			<groupId>org.jboss.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>3.2.3.Final</version>
+			<!--version>3.2.3.Final</version-->
+			<version>3.2.5.Final</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
