added smtp_gateway parameter
git-svn-id: http://svn.code.sf.net/p/hwmail/code@13 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/assembly/src/release/conf/default.properties
+++ b/assembly/src/release/conf/default.properties
@@ -48,3 +48,7 @@ myhostname=mail.hedwig.org
 # smtp_timeout=300000
 # smtp_trace_protocol=true
 # smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
+# The gateway SMTP server configuration
+# smtp_gateway=otherserver.mydomain.com
+# smtp_gateway_username=login
+# smtp_gateway_password=pass
