--- a/trunk/assembly/pom.xml
+++ b/trunk/assembly/pom.xml
@@ -1,23 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>com.hs</groupId>
 		<artifactId>hedwig-parent</artifactId>
-		<version>0.5</version>
+		<version>0.6</version>
 	</parent>
-
 	<artifactId>hedwig</artifactId>
-	<name>Hedwig :: Assembly</name>
+	<name>Hedwig::Assembly</name>
 
 	<dependencies>
+		<!-- Hedwig -->
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>hedwig-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>hedwig-server</artifactId>
 		</dependency>
 	</dependencies>
@@ -25,90 +24,23 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>run-jar</id>
-						<phase>package</phase>
-						<configuration>
-							<tasks>
-								<jar destfile="target/run.jar" basedir="target/classes">
-									<include name="com/hs/mail/container/Main*.class"/>
-									<manifest>
-										<attribute name="Main-Class" value="com.hs.mail.container.Main"/>
-									</manifest>
-								</jar>
-							</tasks>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/descriptors/bin.xml</descriptor>
+					</descriptors>
+					<!--<finalName>${pom.artifactId}-${project.version}</finalName>-->
+				</configuration>
 				<executions>
 					<execution>
-						<id>unix-bin</id>
-						<phase>package</phase>
+						<id>make-assembly</id>
+						<phase>package</phase> <!-- append to the packaging phase. -->
 						<goals>
 							<goal>single</goal>
 						</goals>
-						<configuration>
-							<descriptors>
-								<descriptor>src/main/descriptors/unix-bin.xml</descriptor>
-							</descriptors>
-							<finalName>${pom.artifactId}-${pom.version}</finalName>
-							<appendAssemblyId>false</appendAssemblyId>
-						</configuration>
-					</execution>
-					<execution>
-						<id>windows-bin</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptors>
-								<descriptor>src/main/descriptors/windows-bin.xml</descriptor>
-							</descriptors>
-							<finalName>${pom.artifactId}-${pom.version}</finalName>
-							<appendAssemblyId>false</appendAssemblyId>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
-	
-	<profiles>
-		<profile>
-			<id>assembly-src</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>src</id>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<descriptors>
-										<descriptor>src/main/descriptors/src.xml</descriptor>  
-									</descriptors>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
