--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -1,13 +1,23 @@
 # Database connection information
 
-# MySQL Database connection
-# You MUST replace the following lines with your environment
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/hedwig
-jdbc.user=root
-jdbc.password=handy21
+# Oracle Database connection
+jdbc.driver=oracle.jdbc.driver.OracleDriver
+jdbc.url=jdbc:oracle:thin:@10.10.18.218:1521:XE
+jdbc.user=hedwig
+jdbc.password=hedwig
 jdbc.maxActive=8
 jdbc.maxIdle=8
+
+base.dir=d:\\temp\\vmail\\mailbox
+
+# MySQL Database connection
+# You MUST replace the following lines with your environment
+# jdbc.driver=com.mysql.jdbc.Driver
+# jdbc.url=jdbc:mysql://localhost/hedwig
+# jdbc.user=root
+# jdbc.password=handy21
+# jdbc.maxActive=8
+# jdbc.maxIdle=8
 
 # Directory information
 # data_directory=${app.home}\\data
@@ -29,25 +39,25 @@ jdbc.maxIdle=8
 default_cache_fields=Bcc,Cc,Date,From,In-Reply-To,Message-ID,Received,Reply-To,Sender,Subject,To,X-Priority,X-Secure
 # default_quota=20
 # imap_timeout=1800
-# imap_trace_protocol=true
-# imap_protocol_log=${app.home}\\logs\\imap-protocol.log
+imap_trace_protocol=true
+imap_protocol_log=${app.home}\\logs\\imap-protocol.log
 
 # Network information
 # You MUST replace the following two lines with your environment
-mydomain=hedwig.org
+mydomain=hedwig.org,handysoft.co.kr
 myhostname=mail.hedwig.org
 # mynetworks=0.0.0.0/0.0.0.0
 
 # SMTP server configuration
 # max_retry_count=3
-# message_size_limit=10240000
+message_size_limit=0
 # postmaster=postmaster@mydomain
 # smtp_helo_name=$myhostname
 # smtp_recipient_limit=0
 # smtp_sasl_auth_enable=no
 # smtp_timeout=300000
-# smtp_trace_protocol=true
-# smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
+smtp_trace_protocol=true
+smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
 # The gateway SMTP server configuration
 # smtp_gateway=otherserver.mydomain.com
 # smtp_gateway_username=login
