--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -27,6 +27,7 @@
 	    <log4j-version>1.2.17</log4j-version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<junit.version>4.11</junit.version>
+		<mockito-version>1.10.19</mockito-version>
 	</properties>
 
 	<modules>
@@ -260,6 +261,12 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>${mockito-version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
