--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -13,6 +13,7 @@ compose.subject.forward = [Forward] {0}
 compose.subject.reply   = [Reply] {0}
 compose.urgent          = Urgent
 
+label.address      = Address
 label.attach       = Attachments
 label.bcc          = Bcc
 label.cc           = Cc
@@ -26,6 +27,7 @@ label.status       = Status
 label.subject      = Subject
 label.to           = To
 label.tosenddate   = To send date
+label.type         = Type
 label.username     = User name
 
 main.folder.alreadyexist   = Mailbox with same name already exist.
@@ -71,6 +73,7 @@ menu.replyall       = Reply to all
 menu.resend         = Resend
 menu.reset          = Reset
 menu.restore        = Restore
+menu.revoke         = Recall
 menu.save           = Save
 menu.savedraft      = Save draft
 menu.search         = Search
