imap_thread_count
git-svn-id: http://svn.code.sf.net/p/hwmail/code@61 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -38,6 +38,7 @@ base.dir=d:\\temp\\vmail\\mailbox
 # stop_cron_after=2h
 default_cache_fields=Bcc,Cc,Date,From,In-Reply-To,Message-ID,Received,Reply-To,Sender,Subject,To,X-Priority,X-Secure
 # default_quota=20
+# imap_thread_count=20
 # imap_timeout=1800
 imap_trace_protocol=true
 imap_protocol_log=${app.home}\\logs\\imap-protocol.log
