git-svn-id: http://svn.code.sf.net/p/hwmail/code@71 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -13,6 +13,15 @@ compose.subject.forward = [Forward] {0}
 compose.subject.reply   = [Reply] {0}
 compose.urgent          = Urgent
 
+fetch.account             = Fetch Account
+fetch.account.autoempty   = Delete messages immediately
+fetch.account.password    = Password
+fetch.account.port        = Port
+fetch.account.protocol    = Protocol
+fetch.account.server.addr = Server address
+fetch.account.username    = User name
+fetch.account.usessl      = Use SSL
+
 label.address      = Address
 label.attach       = Attachments
 label.bcc          = Bcc
@@ -46,6 +55,7 @@ menu.compose        = Compose
 menu.copy           = Copy to
 menu.delete         = Delete
 menu.edit           = Edit
+menu.fetch          = Fetch
 menu.filter.all     = All messages
 menu.filter.flagged = Flagged messages
 menu.filter.recent  = New messages
