--- a/trunk/hedwig-webmail/src/main/resources/messages/errormessages.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/errormessages.properties
@@ -4,6 +4,8 @@
 # http://www.zaval.org/products/jrc-editor/
 #
 
+field.required = Field required.
+
 wma.composemessage.draft.failed            = Failed to prepare draft message.
 wma.composemessage.failedattforward        = Failed to append attachments to forward message.
 wma.composemessage.failedcreation          = Failed to create the message wrapper instance.
