git-svn-id: http://svn.code.sf.net/p/hwmail/code@75 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/webapp/WEB-INF/default.properties
+++ b/trunk/hedwig-webmail/src/main/webapp/WEB-INF/default.properties
@@ -3,6 +3,6 @@ postoffice.domain=hedwig.org
 
 mta.address=mail.hedwig.org
 
-wma.data.path=d:\\Konan\\hedwig-0.6\\data
-wma.defer.path=d:\\Konan\\hedwig-0.6\\data\\defer
+wma.data.path=d:\\hedwig\\hedwig-0.6\\data
+wma.defer.path=d:\\hedwig\\hedwig-0.6\\data\\defer
 wma.session.debug=true
