--- a/trunk/hedwig-web/pom.xml
+++ b/trunk/hedwig-web/pom.xml
@@ -83,6 +83,13 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
+		
+		<!-- Jackson JSON -->
+		<!-- <dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency> -->
 
 		<!-- Test -->
 		<dependency>
