--- a/trunk/hedwig-web/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-web/src/main/resources/messages/viewcontent.properties
@@ -40,6 +40,7 @@ login.username=Username
 login.password=Password
 
 menu.add=Add
+menu.edit.acl=Edit access control list
 menu.empty=Empty
 menu.cancel=Cancel
 menu.delete=Delete
@@ -58,6 +59,9 @@ message.import.accounts=Import Accounts
 message.error=Error
 message.list.accounts=Accounts
 message.list.aliases=Aliases
+message.list.public.folders=Public Folders
 message.select.account=Account was not selected.
 message.select.alias=Alias was not selected.
 message.select.import.file=Select the file to import
+
+public.folder.name=Name
