--- a/trunk/hedwig-web/src/main/webapp/WEB-INF/default.properties
+++ b/trunk/hedwig-web/src/main/webapp/WEB-INF/default.properties
@@ -2,13 +2,11 @@
 
 # Oracle Database connection
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@10.10.18.218:1521:XE
+jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:XE
 jdbc.user=hedwig
 jdbc.password=hedwig
 jdbc.maxActive=8
 jdbc.maxIdle=8
-
-base.dir=d:\\temp\\vmail\\mailbox
 
 # MySQL Database connection
 # You MUST replace the following lines with your environment
@@ -36,11 +34,12 @@ base.dir=d:\\temp\\vmail\\mailbox
 # compress_after=3m
 # expunge_after=INBOX 3m Trash 2m
 # stop_cron_after=2h
-default_cache_fields=Bcc,Cc,Date,From,In-Reply-To,Message-ID,Received,Reply-To,Sender,Subject,To,X-Priority,X-Secure
+# default_cache_fields=Bcc,Cc,Date,From,In-Reply-To,Message-ID,Received,Reply-To,Sender,Subject,To,X-Priority,X-Secure
 # default_quota=20
 # imap_timeout=1800
 imap_trace_protocol=true
 imap_protocol_log=${app.home}\\logs\\imap-protocol.log
+namespaces=#public.
 
 # Network information
 # You MUST replace the following two lines with your environment
