--- a/trunk/hedwig-web/pom.xml
+++ b/trunk/hedwig-web/pom.xml
@@ -63,6 +63,13 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
 	
 		<!-- Logging -->
 		<dependency>
