git-svn-id: http://svn.code.sf.net/p/hwmail/code@113 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/errormessages.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/errormessages.properties
@@ -16,6 +16,7 @@ wma.composemessage.setsendtdate.failed     = You have failed to set the sent tim
 #Display message related
 wma.displaymessage.failedcreation          = Failed to create the message wrapper instance.
 wma.displaymessage.notmultipart            = Message is not multi part.
+wma.folder.appendmessage.failed            = Failed to append a given message.
 wma.folder.deletemessage.failed            = Failed to delete a given message.
 wma.folder.displaymime.failed              = Failure while trying to output the raw message.
 wma.folder.displaypart.failed              = Failure while trying to output the specified message part.
