--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -123,6 +123,7 @@ prefs.inboxtype               = INBOX type
 prefs.nosignature             = No signature
 prefs.pagesize                = Page size
 prefs.personalfolder          = Private
+prefs.publicfolder            = Public
 prefs.rootfolder              = Root
 prefs.sendas                  = Send mail as
 prefs.sentmail                = Sent mail
