--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -77,6 +77,7 @@ menu.open           = Open
 menu.prev           = Prev
 menu.purge          = Delete permanently
 menu.rawmsg         = Raw message
+menu.rawmsg.import  = Upload EML...
 menu.read           = Mark as read
 menu.reply          = Reply
 menu.replyall       = Reply to all
