git-svn-id: http://svn.code.sf.net/p/hwmail/code@125 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-server/pom.xml
+++ b/trunk/hedwig-server/pom.xml
@@ -109,6 +109,13 @@
 		</dependency>
 
 		<!-- Test -->
+		<!-- https://mvnrepository.com/artifact/org.apache.james.jspf/apache-jspf-resolver -->
+		<dependency>
+		    <groupId>org.apache.james.jspf</groupId>
+		    <artifactId>apache-jspf-resolver</artifactId>
+		    <version>0.9.8</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
