--- a/trunk/hedwig-web/src/main/webapp/WEB-INF/default.properties
+++ b/trunk/hedwig-web/src/main/webapp/WEB-INF/default.properties
@@ -1,6 +1,7 @@
 # Database connection information
 
 # Oracle Database connection
+jdbc.type=Oracle
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:XE
 jdbc.user=hedwig
@@ -10,6 +11,7 @@ jdbc.maxIdle=8
 
 # MySQL Database connection
 # You MUST replace the following lines with your environment
+# jdbc.type=MySQL
 # jdbc.driver=com.mysql.jdbc.Driver
 # jdbc.url=jdbc:mysql://localhost/hedwig
 # jdbc.user=root
