--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -1,6 +1,7 @@
 # Database connection information
 
 # Oracle Database connection
+jdbc.type=Oracle
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@10.10.18.218:1521:XE
 jdbc.user=hedwig
@@ -12,6 +13,7 @@ base.dir=d:\\temp\\vmail\\mailbox
 
 # MySQL Database connection
 # You MUST replace the following lines with your environment
+# jdbc.type=MySQL
 # jdbc.driver=com.mysql.jdbc.Driver
 # jdbc.url=jdbc:mysql://localhost/hedwig
 # jdbc.user=root
