git-svn-id: http://svn.code.sf.net/p/hwmail/code@151 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -56,10 +56,18 @@ message_size_limit=0
 # smtp_helo_name=$myhostname
 # smtp_recipient_limit=0
 # smtp_sasl_auth_enable=no
-# smtp_timeout=300000
+# smtp_timeout=5000
+# smtp_connect_timeout=5000
 smtp_trace_protocol=true
 smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
 # The gateway SMTP server configuration
 # smtp_gateway=otherserver.mydomain.com
 # smtp_gateway_username=login
 # smtp_gateway_password=pass
+
+# smtpd_error_sleep_time=1
+# smtpd_hard_error_limit=20
+# smtpd_recipient_restrictions=
+# smtpd_sender_restrictions=
+# smtpd_soft_error_limit=10
+# smtpd_timeout=300000
