--- a/trunk/hedwig-server/pom.xml
+++ b/trunk/hedwig-server/pom.xml
@@ -52,7 +52,7 @@
 
 		<!-- Netty -->
 		<dependency>
-			<groupId>org.jboss.netty</groupId>
+			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
 		</dependency>
 
