--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -15,7 +15,7 @@
 	    <mime4j-version>0.6</mime4j-version>
 	    <jsieve-version>0.3</jsieve-version>
 		<dnsjava-version>2.1.7</dnsjava-version>
-		<netty-version>3.2.5.Final</netty-version>
+		<netty-version>3.10.5.Final</netty-version>
 		<commons-cli-version>1.2</commons-cli-version>
 	    <commons-collections-version>3.2</commons-collections-version>
 	    <commons-dbcp-version>1.4</commons-dbcp-version>
@@ -124,7 +124,7 @@
 
 			<!-- Netty -->
 			<dependency>
-				<groupId>org.jboss.netty</groupId>
+				<groupId>io.netty</groupId>
 				<artifactId>netty</artifactId>
 				<version>${netty-version}</version>
 			</dependency>
