git-svn-id: http://svn.code.sf.net/p/hwmail/code@153 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -2,13 +2,13 @@
 
 # Oracle Database connection
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@10.10.18.218:1521:XE
+jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:XE
 jdbc.user=hedwig
 jdbc.password=hedwig
 jdbc.maxActive=8
 jdbc.maxIdle=8
 
-base.dir=d:\\temp\\vmail\\mailbox
+# base.dir=d:\\temp\\vmail\\mailbox
 
 # MySQL Database connection
 # You MUST replace the following lines with your environment
@@ -67,7 +67,7 @@ smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
 
 # smtpd_error_sleep_time=1
 # smtpd_hard_error_limit=20
-# smtpd_recipient_restrictions=
+# smtpd_recipient_restrictions=reject_unlisted_recipient
 # smtpd_sender_restrictions=
 # smtpd_soft_error_limit=10
 # smtpd_timeout=300000
