git-svn-id: http://svn.code.sf.net/p/hwmail/code@161 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/errormessages.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/errormessages.properties
@@ -35,7 +35,7 @@ wma.prefs.save                             = Failed to save preferences.
 wma.session.authentication                 = Authentication from the server has failed.
 #Session related errors
 wma.session.initmail                       = Accessing the server has failed. Please retry later.
-wma.store.archivesentmail.failed           = Failed to archive sent mail.
+wma.store.archivemail.failed               = Failed to archive sent mail.
 wma.store.createfolder.exists              = A folder with the given name already exists in the actual folder.
 wma.store.createfolder.failed              = Failed to create folder on the mail store.
 wma.store.deletefolder.failed              = Failed to delete a given folder from the store.
