--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -58,8 +58,8 @@ message_size_limit=0
 # smtp_sasl_auth_enable=no
 # smtp_timeout=5000
 # smtp_connect_timeout=5000
-smtp_trace_protocol=true
-smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
+# smtp_trace_protocol=true
+# smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
 # The gateway SMTP server configuration
 # smtp_gateway=otherserver.mydomain.com
 # smtp_gateway_username=login
@@ -71,3 +71,7 @@ smtp_protocol_log=${app.home}\\logs\\smtp-protocol.log
 # smtpd_sender_restrictions=
 # smtpd_soft_error_limit=10
 # smtpd_timeout=300000
+
+# spamd_host=127.0.0.1
+# spamd_port=783
+# spamd_action=fileinto "Junk"
