Hedwig administration tool
git-svn-id: http://svn.code.sf.net/p/hwmail/code@178 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -33,6 +33,7 @@
 	<modules>
 		<module>hedwig-api</module>
 		<module>hedwig-server</module>
+		<module>hedwig-adm</module>
 		<module>hedwig-web</module>
 		<module>assembly</module>
 	</modules>
@@ -76,6 +77,11 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>hedwig-server</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>hedwig-adm</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
