Encoding problem when downloading attachment with Korean filename
git-svn-id: http://svn.code.sf.net/p/hwmail/code@180 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -91,6 +91,7 @@ menu.search         = Search
 menu.send           = Send
 menu.settings       = Settings
 menu.unread         = Mark as unread
+menu.upload.eml     = Upload eml
 
 message.confirm.delete = Do you want to delete the selected messages?
 message.defersend      = Do not deliver before
